drum kit completed

--- a/drumbeat/index.html
+++ b/drumbeat/index.html
@@ -5,7 +5,7 @@
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -58,6 +58,7 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+
 
 </body>
 </html>
