working with array

--- a/AjaxType/Nigeria/index.html
+++ b/AjaxType/Nigeria/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
+  <title>Nigeria🟩</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
   <script async src="script.js"></script>
@@ -10,9 +10,9 @@
 <body>
 
   <form class="search-form">
-    <input type="text" class="search" placeholder="City or State">
+    <input type="text" class="search" placeholder="Nigeria LGA">
     <ul class="suggestions">
-      <li>Filter for a city</li>
+      <li>Filter for a LGA in Nigeria</li>
       <li>or a state</li>
     </ul>
   </form>
