--- a/multipleCheckboxing/index.html
+++ b/multipleCheckboxing/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Hold Shift to Check Multiple Checkboxes</title>
   <link rel="icon" href="https://fav.farm/🔥" />
-  <script src="script.js"></script>
+
 </head>
 <body>
   <style>
@@ -33,7 +33,7 @@
     }
 
     input:checked + p {
-      background: #F9F9F9;
+      background: #ffc600;
       text-decoration: line-through;
     }
 
@@ -98,4 +98,5 @@
   </div>
 
 </body>
+<script src="script.js"></script>
 </html>
