--- a/sortingBandNames/index.html
+++ b/sortingBandNames/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Sort Without Articles</title>
   <link rel="icon" href="https://fav.farm/🔥" />
+  <script async src="script.js"></script>
 </head>
 <body>
 
