--- a/tallyStringTimes/index.html
+++ b/tallyStringTimes/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Videos</title>
   <link rel="icon" href="https://fav.farm/🔥" />
-  <script src="script.js"></script>
+  <script async src="script.js"></script>
 </head>
 <body>
   <ul class="videos">
