--- a/nativeSpeechRecognition/index.html
+++ b/nativeSpeechRecognition/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Speech Detection</title>
   <link rel="icon" href="https://fav.farm/🔥" />
+  <script async src="script.js"></script>
 </head>
 <body>
 
@@ -11,7 +12,6 @@
   </div>
 
 <script>
-  window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
   
 
 </script>
