--- a/followAlong/index.html
+++ b/followAlong/index.html
@@ -5,7 +5,7 @@
   <title>👀👀👀Follow Along Nav</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
-  <script src="script.js"></script>
+  <script async src="script.js"></script>
 </head>
 <body>
 
